MetaItem title overflow fixed

--- a/src/common/MetaItem/styles.less
+++ b/src/common/MetaItem/styles.less
@@ -60,6 +60,9 @@
             font-size: 1.4em;
             padding: 0 0.5em;
             color: var(--color-surfacelighter);
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
         }
 
         .menu-icon {
